# Robot_OS

./: .gitignore  ADAPTER_IMPLEMENTATION_GUIDE.md  CURRENT_STATE.md  DOC_SYNC_RULES.md  FINAL_CANONICAL_DECISION_MEMO.md  IMPLEMENTATION_CHECKLIST.md  PHASE_CLOSE_TEMPLATE.md  README.md  ROBOTOS_BOOTSTRAP.md
.claude/: CLAUDE.md
RobotOS_v1.0/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  Kconfig  README.md  prj.conf  west.yml
RobotOS_v1.0/app/probe_translator/: README.md  probe_translator.c  probe_translator.h
RobotOS_v1.0/boards/: README.md
RobotOS_v1.0/core/: README.md  robotos_core.c  robotos_core.h  robotos_event_dispatcher.c  robotos_event_dispatcher.h  robotos_event_queue.c  robotos_event_queue.h
RobotOS_v1.0/devkit/: CMakeLists.txt  README.md  prj.conf
RobotOS_v1.0/devkit/docs/: COMMAND_SET_DRAFT.md  DEVKIT_PROGRESS.md  DEVKIT_PROGRESS_PHASE_10.md  PHASE_10A_CLOSE.md  PHASE_10B_D_CLOSE.md  PHASE_10B_L_CLOSE.md  PHASE_10B_V_CLOSE.md  PHASE_10C_COMMAND_SET_CHECKPOINT.md  PHASE_9EZ_CHECKPOINT.md  PHASE_9G_CLOSE.md  PHASE_9Z_CHECKPOINT.md  TELEMETRY_REFERENCE.md  WORKLOAD_DEMO_9D.md
RobotOS_v1.0/devkit/logs/: INDEX.md  phase_10B_L_host_2026-05-11.txt  phase_10B_L_visual_host_2026-05-11.txt  phase_10B_L_visual_rtt_2026-05-11.txt  phase_10B_d_host_2026-05-11.txt  phase_10B_d_rtt_2026-05-11.txt  phase_10B_v_host_2026-05-11.txt  phase_10B_v_rtt_2026-05-11.txt  phase_11E_accel_probe_host_2026-05-12.txt  phase_11E_accel_probe_rtt_2026-05-12.txt  phase_12K_build_2026-05-14.txt  phase_12L_build_2026-05-14.txt  phase_12M_build_2026-05-14.txt  phase_12M_flash_2026-05-14.txt  phase_12M_rtt_2026-05-14.txt  phase_12M_uart_2026-05-14.txt  phase_5D_rtt_2026-05-02.txt  phase_5E_rtt_2026-05-02.txt  phase_5F_rtt_2026-05-02.txt  phase_6A_rtt_2026-05-02.txt  phase_6B_rtt_2026-05-02.txt  phase_6C_rtt_2026-05-02.txt  phase_6D_rtt_2026-05-02.txt  phase_6E_rtt_2026-05-02.txt  phase_6F_rtt_2026-05-03.txt  phase_6G_rtt_2026-05-02.txt  phase_6H_rtt_2026-05-03.txt  phase_6I_rtt_2026-05-03.txt  phase_6O_harness_smoke_2026-05-08.txt  phase_6Z_rtt_2026-05-07.txt  phase_9A_button_rtt_2026-05-08.txt  phase_9B_debounce_rtt_2026-05-08.txt  phase_9B_uart_rtt_2026-05-08.txt  phase_9C_app_state_rtt_2026-05-08.txt  phase_9C_no_burst_button_rtt_2026-05-08.txt  phase_9D_workload_demo_2026-05-08.txt  phase_9E_rtt_precheck_2026-05-09.txt  phase_9E_uart_tx_response_host_2026-05-09.txt  phase_9E_uart_tx_response_rtt_2026-05-09.txt  phase_9G_uart_burst_host_2026-05-11.txt  (+1 more)
RobotOS_v1.0/devkit/src/: devkit_app_state.c  devkit_app_state.h  devkit_build_info.c  devkit_build_info.h  devkit_button_producer.c  devkit_button_producer.h  devkit_fault.c  devkit_fault.h  devkit_observability.c  devkit_observability.h  devkit_probe_adapter.c  devkit_probe_adapter.h  devkit_runtime.c  devkit_runtime.h  devkit_status_led.c  devkit_status_led.h  devkit_timer_producer.c  devkit_timer_producer.h  devkit_uart_producer.c  devkit_uart_producer.h  main.c
RobotOS_v1.0/framework/: README.md  robotos_fw_event_bridge.c  robotos_fw_event_bridge.h  robotos_fw_fsm.c  robotos_fw_fsm.h
RobotOS_v1.0/include/: README.md
RobotOS_v1.0/include/app/: README.md  app_deadlines.h  app_sm.h  config_profiles.h  gcode_parser.h  kinematics_cartesian.h  motion_planner.h  motion_seg.h
RobotOS_v1.0/include/robotos/: DEPRECATED.md  README.md  dcmotor.h  encoder.h  endstop.h  filter.h  limiter.h  pid.h  ro_assert.h  ro_deadline.h  ro_gpio.h  ro_i2c.h  ro_log.h  ro_mutex.h  ro_pool.h  ro_pwm.h  ro_queue.h  ro_spi.h  ro_status.h  ro_thread.h  ro_time.h  ro_timer.h  ro_trace.h  robot_sm.h  sensor.h  servo.h  stepper.h
RobotOS_v1.0/platform/: README.md  robotos_platform_critical.h  robotos_platform_fault.h  robotos_platform_log.h  robotos_platform_time.h
RobotOS_v1.0/platform/zephyr/: robotos_platform_critical_zephyr.c  robotos_platform_fault_zephyr.c  robotos_platform_log_zephyr.c  robotos_platform_time_zephyr.c
RobotOS_v1.0/src/: README.md  README_LEGACY_SCAFFOLD.md
RobotOS_v1.0/src/adapter/: README.md
RobotOS_v1.0/src/app/: README.md  app_glue_robotos.c  app_glue_zephyr.c  app_main.c  app_sm.c  config_profiles.c  gcode_parser.c  kinematics_cartesian.c  motion_planner.c
RobotOS_v1.0/src/framework/: DEPRECATED.md  README.md  dcmotor.c  encoder.c  endstop.c  filter.c  limiter.c  pid.c  robot_sm.c  sensor.c  servo.c  stepper.c
RobotOS_v1.0/tests/: CMakeLists.txt  README.md  test_app_sm.c  test_gcode_parser.c  test_kinematics_cartesian.c  test_motion_planner.c
RobotOS_v1.0/tests/host/: CMakeLists.txt  robotos_platform_critical_host_stub.c  robotos_platform_critical_host_stub.h  robotos_platform_fault_host_stub.c  robotos_platform_fault_host_stub.h  robotos_platform_log_host_stub.c  robotos_platform_time_host_stub.c  save_test_log.cmake  test_app_probe_translator_mapping.c  test_robotos_core_contract.c  test_robotos_core_critical_boundary_contract.c  test_robotos_core_dispatch_critical_contract.c  test_robotos_core_handler_policy_contract.c  test_robotos_core_ingestion_contract.c  test_robotos_core_tick_policy_contract.c  test_robotos_event_dispatcher_contract.c  test_robotos_event_queue_contract.c  test_robotos_fw_event_bridge.c  test_robotos_fw_fsm.c  test_robotos_handler_lifecycle_contract.c  test_robotos_handler_routing_stress_contract.c  test_robotos_mixed_event_policy_contract.c  test_robotos_platform_critical_contract.c  test_robotos_platform_fault_contract.c  test_robotos_queue_pressure_contract.c  test_robotos_scheduler_admission_contract.c  test_robotos_scheduler_backpressure_contract.c  test_robotos_scheduler_retry_contract.c  test_robotos_scheduler_retry_policy_contract.c  test_robotos_scheduler_throttle_contract.c  test_robotos_snapshot_coherence_contract.c  test_robotos_timer_producer_contract.c
RobotOS_v1.0/tools/runtime/: README.md  capture_devkit_rtt.ps1  capture_phase6h_runtime.ps1  phase6h_read.gdb  phase6z_required_patterns.txt  run_phase10b_d_disarm_demo.ps1  run_phase10b_l_led_command_demo.ps1  run_phase10b_v_build_query_demo.ps1  run_phase11d_accel_probe_demo.ps1  run_phase12m_probe_demo.ps1  run_phase9d_demo.ps1  (+2 more)
(+112 files in other folders)
